# vibe-kanban

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  .projectrc  AGENTS.md  AI-開發工具整合最佳實踐分析報告.md  API_KEY_REQUIREMENTS.md  BUILD_INSTRUCTIONS.md  BUILD_MOBILE_NPX.md  CLAUDE.md  CLAUDE_SDK_IMPLEMENTATION.md  COMMIT_MESSAGES.md  CONFIG-ANALYSIS.md  CONTRIBUTORS.md  Caddyfile.dev  Cargo.toml  Claude-Night-Pilot-整合重構計劃.md  DELTA.md  Dockerfile  Dockerfile.dev  Dockerfile.prepare-db  ENV_SETUP_QUICKSTART.md  FRONTEND_TEXT_CONTENT_ANALYSIS.md  FRONTEND_TEXT_SELECTORS_QUICK_REFERENCE.md  GEMINI.md  GITHUB_ISSUE_EMPTY_PR.md  HANDOFF.md  IMAGE_SUPPORT_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS_TO_ENABLE_ATTACHMENTS.md  KEYBOARD_SHORTCUTS.md  Makefile  PI_AGENT_CONFIGURATION_ENHANCEMENTS.md  PI_RPC_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.de.md  README.es.md  README.ja.md  (+71 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: ISSUE_DESCRIPTION.md  PR_DESCRIPTION.md  dependabot.yml
.holicode/: .framework-manifest
.ralph/: prd.json  progress.txt  prompt.md
.sisyphus/: boulder.json
.specs/: 2026-04-05-mcp-tools-expansion-design.md
.sqlx/: query-068330776e0c370b8237fe694b14d9f72f1e29d80e0bdf8d12cabf29775840fd.json  query-0a674f8f8833a64c8d341660526cf6004a6c8c094f3b24feaf43e549b45df482.json  query-4f1012ef977b9646472c087fdb7559000fe2a42d88bcbb91d19765c95e096d7c.json  query-4fc57f1990a98e4551c682b1bfa1e803c386b8db601b69a0694fd9b8544dc2ce.json  query-69446961151cb05440f9e8d7d88d90f7b27bf6742b8b622bd81e52ef15f16d04.json  query-724aceb3b334e9497f3d28fb565a6210b0ad3e59364cf9cac218a537eb98c641.json  query-724f16ad4f92c2a61d02b9f2aa2e76467b577ce6e12b31fdf366f3d96bc06032.json  query-788c58eb632d2039085811597034d98a27da37496a35be6d2ee5e16ed5fd1fcc.json  query-89a15a709862b1830ed3bcf7908042a0a775e18928d474764d4e16763a716554.json  query-913dcc4f48e00ed36dbfb1c26b3c9125b468a962b437629974057ed1fde24818.json  query-95d74fd63fd7cd5ffaac219a8b0226efeb3036195eb87fc4b24ecb984bc6bfbb.json  query-a4ac31eae2e56afc6cea28c7895377759fe53749b8f49f4c003f9896bb18d76d.json  query-aa85995fee0313a353f4a513d929f6425719a90ccd1bbc4286673f142e8accf6.json  query-abde20d45705a8a08a10000ed8c6f726408e14f0c15125d622d5b82cdb7550b2.json  query-b113c75cda5df494eef60013c3b9dcf8561b019240ad447482db4522f81dcbf0.json  query-b1eb81e2339462145a8e74724fe6d64091e6ca5a2679d6e8534cc6362adbaddc.json  query-bc05d20632be3d80da5695265db11160ff542bf702fd4163c3faf8e4dcec2a23.json  query-c462ff7dfd9268ddabc8f9a3199f4d41bcbcb8acdf732660ed50fddc19a6456d.json  query-c5d75ac1fc68da897a262381d1c4ee73c06e9e0fc721069b188c9730d0d06335.json  query-d600d56f268383eafb0cc9bf248ccc66554f425d24946a9d58d6ba052cd8cb38.json  query-dad1f3bd29524b39d2c8ece4ae991f8a1f38a5d7feb367975967215f45170f22.json  query-ed80d5d5f7527a40cbc345c374899ba6a312013922a3acc01daa6bc5af75f4f2.json  query-f29e031b78b6791dd986a551d45bcf6e5523bcdc431fe554ecff5546910145e3.json  query-f6a2ae2f08904b0699b90d67b5c17b5d499cfe84d5a0dd7a58ad1411b6500182.json  query-fea067bd59246c2a0373722ff601500bde73ce459c48c25170e76a193645cb60.json
backend/: Cargo.toml  prepare_db.sqlite  test.sh  vibe-kanban.db
crates/local-deployment/: Cargo.toml  build.rs
crates/local-deployment/src/: container.rs  conversation_broadcaster.rs  copy.rs  lib.rs  pty.rs  relay_host_store.rs
crates/preview-proxy/: Cargo.toml
crates/preview-proxy/src/: api.rs  lib.rs  proxy_common.rs  ws_bridge.rs
crates/relay-client/: Cargo.toml
crates/relay-client/src/: lib.rs
crates/relay-control/: Cargo.toml
crates/relay-control/src/: lib.rs  signed_ws.rs  signing.rs
crates/relay-tunnel/: Cargo.toml  Dockerfile
crates/relay-tunnel/.sqlx/: query-152aecdffb11c85815b8024d1f34593fe84c8d362fab872919983990b874466b.json
crates/relay-tunnel/src/: client.rs  lib.rs  server.rs  ws_io.rs
crates/relay-tunnel/src/client/: connect.rs  http.rs  mod.rs  tcp.rs
crates/relay-tunnel/src/server/: control.rs  http.rs  mod.rs  subdomain.rs  tcp.rs
crates/relay-tunnel/src/server_bin/: config.rs  relay_registry.rs
crates/relay-tunnel/src/server_bin/db/: hosts.rs
crates/relay-tunnel/src/server_bin/routes/: auth_code.rs  connect.rs  mod.rs  path_routes.rs  subdomain.rs
crates/relay-webrtc/: Cargo.toml
crates/relay-webrtc/src/: client.rs  host.rs  lib.rs  peer.rs  proxy.rs  stun.rs
crates/relay-ws-client/: Cargo.toml
crates/relay-ws-client/src/: lib.rs  request_auth.rs  socket.rs  tunnel.rs
crates/relay-ws-server/: Cargo.toml
crates/relay-ws-server/src/: lib.rs
crates/ssh-proxy/: Cargo.toml
crates/ssh-proxy/src/: auth.rs  connect.rs  main.rs
crates/tauri-app/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: linux_notifications.rs  macos_notifications.rs  main.rs
crates/utils/: Cargo.toml
crates/utils/src/: approvals.rs  assets.rs  command_ext.rs  desktop.rs  diff.rs  git.rs  lib.rs  log_msg.rs  logs_limits.rs  mcp_binary.rs  msg_store.rs  path.rs  port_file.rs  process.rs  response.rs  shell.rs  stream_ext.rs  terminal.rs  text.rs  user_questions.rs  vk_mcp_context.rs  ws.rs
crates/utils/src/api/: mod.rs  oauth.rs  organizations.rs  projects.rs  types.rs  workspaces.rs
crates/utils/src/api/entities/: issue.rs  issue_assignee.rs  issue_comment.rs  issue_comment_reaction.rs  issue_follower.rs  issue_relationship.rs  issue_tag.rs  mod.rs  notification.rs  organization_member.rs  project.rs  project_status.rs  pull_request.rs  tag.rs  workspace.rs
crates/utils/src/git/: cli.rs  mod.rs  utils.rs
docs/: EVERY_CODE_EXECUTOR_PLAN.md  MULTIPLAYER_IMPLEMENTATION_PLAN.md  RESEARCH-Vue-Runtime-Component-Detection.md  app-navigation-hard-migration-plan.md  architecture-analysis-en.md  architecture-analysis-ru.md  browser-testing.mdx  (+38 more)
forge-app/: Cargo.toml
forge-app/migrations/: 000_add_branch_template_column.sql  001_auxiliary_tables.sql  002_migrate_data.sql
forge-app/src/: lib.rs  main.rs  router.rs
forge-app/src/services/: mod.rs  task_service.rs
(+3056 files in other folders)
