[package]
name = "local-deployment"
version = "0.1.19"
edition = "2024"

[dependencies]
api-types = { path = "../api-types" }
db = { path = "../db" }
executors = { path="../executors" }
deployment = { path = "../deployment" }
services = { path = "../services" }
utils = { path = "../utils" }
git = { path = "../git" }
trusted-key-auth = { path = "../trusted-key-auth" }
tokio-util = { version = "0.7", features = ["io"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3"
tokio = { workspace = true }
globwalk = "0.9"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3.8"
