[package]
name = "local-deployment"
version = "0.1.29"
edition = "2024"

[dependencies]
api-types = { path = "../api-types" }
db = { path = "../db" }
executors = { path="../executors" }
deployment = { path = "../deployment" }
desktop-bridge = { path = "../desktop-bridge" }
embedded-ssh = { path = "../embedded-ssh" }
relay-control = { path = "../relay-control" }
relay-hosts = { path = "../relay-hosts" }
relay-types = { path = "../relay-types" }
russh = "0.48"
client-info = { path = "../client-info" }
remote-info = { path = "../remote-info" }
services = { path = "../services" }
worktree-manager = { path = "../worktree-manager" }
workspace-manager = { path = "../workspace-manager" }
utils = { path = "../utils" }
git = { path = "../git" }
trusted-key-auth = { path = "../trusted-key-auth" }
tokio-util = { version = "0.7", features = ["io"] }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
ed25519-dalek = "2.2.0"
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
futures = "0.3"
tokio = { workspace = true }
globwalk = "0.9"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3.8"
