[package]
name = "preview-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
deployment = { path = "../deployment" }
futures-util = "0.3"
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["serde", "v4"] }
