[package]
name = "relay-client"
version = "0.1.27"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
http = "1"
os_info = "3.12.0"
relay-control = { path = "../relay-control" }
relay-types = { path = "../relay-types" }
relay-ws-client = { path = "../relay-ws-client" }
relay-ws-protocol = { path = "../relay-ws-protocol" }
reqwest = { workspace = true }
serde = { workspace = true }
spake2 = { version = "0.5.0-pre.0", features = ["getrandom"] }
tokio = { workspace = true }
trusted-key-auth = { path = "../trusted-key-auth" }
uuid = { version = "1.0", features = ["v4", "serde"] }
