[package]
name = "relay-control"
version = "0.1.31"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.0", features = ["v4"] }
