[package]
name = "relay-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
str0m = "0.16.2"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
relay-control = { path = "../relay-control", features = ["tungstenite"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
