[package]
name = "utils"
version = "0.1.27"
edition = "2024"

[dependencies]
api-types = { path = "../api-types" }
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"
shlex = "1.3.0"
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
rust-embed = "8.2"
directories = "6.0.0"
open = "5.3.2"
regex = "1.11.1"
# TODO: Remove once sentry publishes a version that depends on reqwest 0.13.
# reqwest 0.12 is added here to enable TLS features for sentry's internal reqwest 0.12 dependency
# via cargo feature unification (the workspace uses reqwest 0.13 which doesn't unify with 0.12).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots-no-provider"] }
sentry = { version = "0.41.0", default-features = false, features = ["anyhow", "backtrace", "panic", "debug-images", "reqwest"] }
sentry-tracing = { version = "0.41.0", default-features = false, features = ["backtrace"] }
json-patch = "2.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tokio = { workspace = true }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
shellexpand = "3.1.1"
which = "8.0.0"
similar = "2"
git2 = { workspace = true }
dirs = "5.0"
thiserror = { workspace = true }
command-group = { version = "5.0", features = ["with-tokio"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "uuid", "chrono", "derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_System_Environment"] }
